Bug 266063 - KMail don't include Message-ID into header
Summary: KMail don't include Message-ID into header
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-11 09:57 UTC by LOE
Modified: 2011-02-22 15:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LOE 2011-02-11 09:57:38 UTC
Version:           2.0.89
OS:                Linux

Hello.
I use KDE-4.6.0 with kdepim-4.5.94.1 (kmail version 2.0.89) and dbmail-2.2.4 as
IMAP server.

Kmail don't include Message-ID into header of new messages



Reproducible: Always

Steps to Reproduce:
Create and send new message

Actual Results:  
Message-ID don't appear in header

Expected Results:  
Message-ID must be in header of new messages
Comment 1 dmizyk 2011-02-13 18:40:05 UTC
I have the same bug. 

kmail -v
Qt: 4.7.0
KDE: 4.6.00 (4.6.0)
KMail: 2.0.89

OS: Ubuntu 10.10
Comment 2 dawan 2011-02-15 12:58:45 UTC
Same thing here with the same versions. Those are all the missing headers that I had in sent mails with Mail/1.13.5. I don't know the meaning of most of them, but Message-Id was the more usefull.

X-KMail-Identity:
X-KMail-Fcc:
X-KMail-Link-Message:
X-KMail-Link-Type:
X-KMail-Transport:
X-KMail-QuotePrefix:
Message-Id:
Status:
X-Status:
X-KMail-EncryptionState:
X-KMail-SignatureState:
X-KMail-MDN-Sent:
Comment 3 thepurple 2011-02-16 16:29:12 UTC
*** This bug has been confirmed by popular vote. ***
Comment 4 Torgny Nyblom 2011-02-22 15:45:48 UTC
Git commit 04376394ddbfe6a53cb828d8625242c03a9a8612 by Torgny Nyblom.
Committed on 22/02/2011 at 14:43.
Pushed by tnyblom into branch 'master'.

Always generate a Message-ID header when composing

BUG: 266063
REVIEW: 100690

M  +1    -0    messagecomposer/composer.cpp     
M  +20   -0    messagecomposer/skeletonmessagejob.cpp     
M  +16   -0    messagecomposer/tests/skeletonmessagejobtest.cpp     
M  +1    -0    messagecomposer/tests/skeletonmessagejobtest.h     

http://commits.kde.org/kdepim/04376394ddbfe6a53cb828d8625242c03a9a8612