Always generate a Message-ID header when composing

BUG: 266063
REVIEW: 100690